refactored threshold crypto and added examples

--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2018"
 publish = false
 
 [dependencies]
-tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
+tokio = { version = "1.5.0", features = ["full"] }
+tokio-util = { version = "0.6.6", features = ["codec"] }
+futures = "0.3.14"
 ed25519-dalek = { version = "1.0.1", features = ["batch"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 rand = "0.7.3"
 base64 = "0.13.0"
 threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
+bytes = { version = "1", features = ["serde"] }
