--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -16,3 +16,6 @@ rand = "0.7.3"
 base64 = "0.13.0"
 threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
 bytes = { version = "1", features = ["serde"] }
+rayon = "1"
+rsa = "0.6.1"
+bincode = "1.3.3"
