--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -10,5 +10,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.24"
 serde_json = "1.0.64"
 log = "0.4.14"
+threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
+rand = "0.7.3"
 
 crypto = { path = "../crypto" }
