--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -15,6 +15,7 @@ bincode = "1.3.1"
 anyhow = "1.0.40"
 rand = "0.7.3"
 futures = "0.3.15"
+threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
 
 config = { path = "../config" }
 store = { path = "../store" }
